kubernetes/towonel/hub/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hub-internal
  namespace: towonel
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - hub.whoverse.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: towonel-hub-main
          port: 8443
